# Ghoul-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  Ghoul Engine.cpp  GhoulEngine.cpp  NOTICE  README.md  SDL2_ImGui_OpenGL copy.cpp  SDL2_ImGui_OpenGL.cpp  SDL2_ImGui_OpenGL_Grid.cpp  SDL2_ImGui_OpenGL_Template.cpp  debug_this.rdc  ghoul.rc  ghoul.res  imgui.ini  loger.cpp  main.cpp  readFile.cpp
assets/: ghoul.res
dependencies/: CmakeLists.txt
dependencies/glad/: CmakeLists.txt
dependencies/imgui/: CmakeLists.txt
headers/: defines.hpp  defines_and_globals.hpp  fileInterfaces.hpp  globalsAndDefines.hpp  imguiDraw.hpp  node.hpp  resourceManager.cpp  resourceManager.hpp  scene.hpp  texture.hpp
headers/GH/: error.hpp  files.hpp  globalsAndDefines.hpp  lua.hpp  resourceManager.hpp
headers/GH/cpp/: cppMain.hpp  error.hpp  files.hpp  globalsAndDefines.hpp  images.hpp  resourceManager.hpp  scene.hpp  texture.hpp  textureManager.hpp  window.hpp
headers/GH/lua/: luaMain.hpp  luaManager.hpp  scripting.hpp
include/GLAD/: glad.h
include/Ghoul Engine/: Ghoul Engine.hpp
releases/Ghoul-Engine-v0.1.0-alpha/shaders/: vertexShader.glsl
res/game/: main.lua  res.lua  settings.lua
res/shaders/: vertex.glsl
shaders/: fragmentShader.glsl  vertexShader.glsl
source/: defines_and_globals.cpp  fileInterfaces.cpp  imguiDraw.cpp  main.cpp  node.cpp  resourceManager.cpp  scene.cpp  texture.cpp
source/GH/: error.cpp  files.cpp  lua.cpp  main.cpp  resourceManager.cpp  texture.cpp
source/GH/cpp/: cppMain.cpp  error.cpp  files.cpp  images.cpp  resourceManager.cpp  scene.cpp  texture.cpp  textureManager.cpp  window.cpp
source/GH/lua/: luaMain.cpp  luaManager.cpp  scripting.cpp
vendors/lua/: CMakeLists.txt  lua.hpp  luaCPP.hpp
vendors/tinyfiledialogs/: CMakeLists.txt
