set(USE_MSVC_RUNTIME_LIBRARY_DLL false CACHE BOOL "Use MSVC runtime library DLL")

set(POSITION_INDEPENDENT_CODE true)

cmake_minimum_required(VERSION 3.20)
project(Ghoul-Engine DESCRIPTION "A Basic Game Engine" LANGUAGES CXX HOMEPAGE_URL "https://github.com/ShoweryCellar34/Ghoul-Engine")
file(GLOB source source/*/*.cpp)
add_executable(Ghoul-Engine ${source})
set_property(TARGET Ghoul-Engine PROPERTY CXX_STANDARD 20)
add_subdirectory(vendors/json)
add_subdirectory(vendors/lua)
add_subdirectory(vendors/Pentagram)
add_subdirectory(vendors/tinyfiledialogs)
target_include_directories(Ghoul-Engine PUBLIC headers)
target_link_libraries(Ghoul-Engine PUBLIC nlohmann_json::nlohmann_json lua Pentagram tinyfiledialogs)

if(MSVC)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_CRT_SECURE_NO_WARNINGS /MP")
endif()
if(GCC)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra -pedantic -fsanitize=address,undefined")
endif()

add_custom_target(delete_resources ALL COMMAND ${CMAKE_COMMAND} -E remove_directory ${PROJECT_BINARY_DIR}/res/* COMMENT "Deleting old resources in binary directory")
add_custom_target(copy_resources ALL COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/res ${PROJECT_BINARY_DIR}/res COMMENT "Copying resources into binary directory")
